--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+    id 'realm-android'
 }
 
 android {
@@ -12,7 +15,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -30,6 +33,8 @@ android {
         jvmTarget = '1.8'
     }
 }
+
+ext.anko_version='0.10.8'
 
 dependencies {
 
@@ -49,4 +54,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.8'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
+    implementation "com.beardedhen:androidbootstrap:2.3.2"
+    implementation "com.android.support:multidex:1.0.0"
 }
