--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     implementation "com.beardedhen:androidbootstrap:2.3.2"
     implementation "com.android.support:multidex:1.0.0"
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.1.5"
+    implementation 'com.ashokvarma.android:bottom-navigation-bar:2.2.0'
     implementation 'com.github.kizitonwose:CalendarView:1.0.4'
+
+
 
 }
